--- a/public/pages/admin_login.ejs
+++ b/public/pages/admin_login.ejs
@@ -59,6 +59,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <%- navbar %>
