--- a/public/pages/login.ejs
+++ b/public/pages/login.ejs
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <%- navbar %>
