--- a/public/pages/products.ejs
+++ b/public/pages/products.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Amazon</title>
-    <link rel="stylesheet" href="styles.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -16,5 +16,14 @@
   </head>
   <body>
     <%- navbar %>
+    <!-- product -->
+    <% products.forEach(product => { %>
+    <!-- product contains : -->
+    <!-- product.name -->
+    <!-- product.price -->
+    <!-- product.image [ url ]-->
+    <!-- product.category -->
+    <!-- product.comments [ array ]-->
+    <% }); %>
   </body>
 </html>
