--- a/public/components/home.ejs
+++ b/public/components/home.ejs
@@ -1,4 +1,4 @@
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleControls" class="carousel slide hero" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100" src="../images/hero_image.jpg" alt="First slide">
