--- a/public/pages/login.ejs
+++ b/public/pages/login.ejs
@@ -1,19 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Amazon</title>
+    <title></title>
+    <link rel="stylesheet" href="../css/login.css" />
     <link
+      href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <%- navbar %>
+    <section>
+      <p id="error" class="hidden error"></p>
+    </section>
+    <div class="main">
+      <input type="checkbox" id="chk" aria-hidden="true" />
+      <div class="signup">
+        <form action="/api/user/signup" method="POST">
+          <label for="chk" aria-hidden="true">Sign up</label>
+          <input
+            type="text"
+            name="username"
+            placeholder="Username"
+            required=""
+          />
+          <input type="email" name="email" placeholder="Email" required="" />
+          <input
+            type="password"
+            name="password"
+            placeholder="Password"
+            required=""
+          />
+          <button>Sign up</button>
+        </form>
+      </div>
+
+      <div class="login">
+        <form action="/api/user/login" method="POST">
+          <label for="chk" aria-hidden="true">Login</label>
+          <input type="email" name="email" placeholder="Email" required="" />
+          <input
+            type="password"
+            name="password"
+            placeholder="Password"
+            required=""
+          />
+          <button>Login</button>
+        </form>
+      </div>
+    </div>
+    <!--  -->
+
+    <script>
+      function showError(message) {
+        const errorParagraph = document.getElementById("error");
+        errorParagraph.textContent = message;
+        errorParagraph.classList.remove("hidden");
+      }
+
+      const urlParams = new URLSearchParams(window.location.search);
+      const error = urlParams.get("error");
+
+      if (error) {
+        showError(error);
+      }
+
+      var currentPage = "<%= page %>";
+      if (currentPage === "login") {
+        const chk = document.getElementById("chk");
+        chk.click();
+      }
+    </script>
   </body>
 </html>
