--- a/public/pages/newproductadd.ejs
+++ b/public/pages/newproductadd.ejs
@@ -141,11 +141,9 @@
           required
         >
           <option value="electronics">Electronics</option>
-          <option value="clothing">Clothing</option>
-          <option value="automotive">Automotive Parts & Accessories</option>
-          <option value="home_appliances">Home Appliances</option>
-          <option value="health_beauty">Health & Beauty</option>
           <option value="toys_games">Toys & Games</option>
+          <option value="clothing">Clothing</option>
+          <option value="jewelery">jewelery</option>
         </select>
         <!-- sumbit button -->
         <button type="submit" class="productadd_button">Add Product</button>
