--- a/public/pages/products.ejs
+++ b/public/pages/products.ejs
@@ -18,12 +18,20 @@
     <%- navbar %>
     <!-- product -->
     <% products.forEach(product => { %>
-    <!-- product contains : -->
-    <!-- product.name -->
-    <!-- product.price -->
-    <!-- product.image [ url ]-->
-    <!-- product.category -->
-    <!-- product.comments [ array ]-->
+    <div class="items">
+      <!-- linking whole items to product page link -->
+      <a href="/product-info/<%= product.name %>" class="product_name">
+        <!-- product image -->
+        <img
+          src="<%= product.image %>"
+          alt="<%= product.image %>"
+          class="product_image"
+        />
+        <!-- product name -->
+        <h6 class="product_name"><%= product.name %></h6>
+        <!-- add to cart button -->
+      </a>
+    </div>
     <% }); %>
   </body>
 </html>
