--- a/public/components/navbar.ejs
+++ b/public/components/navbar.ejs
@@ -5,7 +5,7 @@
       <a class="link link-active" href="/">Home</a>
     </li>
     <li class="list-item-inline">
-      <a class="link" href="#">Shop</a>
+      <a class="link" href="/products">Shop</a>
     </li>
     <li class="list-item-inline">
       <a class="link" href="#">Contact Us</a>
@@ -21,7 +21,7 @@
       </a>
     </li>
     <li class="list-item-inline">
-      <a class="link" href="#">
+      <a class="link" href="/profile">
         <i class="fa-solid fa-user"></i>
       </a>
     </li>
