--- a/public/pages/404.ejs
+++ b/public/pages/404.ejs
@@ -13,8 +13,83 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="../css/styles.css" />
+    <style>
+      *{
+        margin: 0;
+        padding: 0;
+        outline: none;
+        box-sizing: border-box;
+        font-family: 'Poppins', sans-serif;
+      }
+
+      .error-page{
+        position: absolute;
+        top: 10%;
+        left: 17%;
+        bottom: 20%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #fff;
+        box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
+      }
+
+      .error-page .content{
+        max-width: 600px;
+        text-align: center;
+      }
+
+      .content h1{
+        font-size: 18vw;
+        line-height: 1em;
+      }
+
+      .content h4{
+        font-size: 1.5em;
+        margin-top: 20px;
+        text-transform: uppercase;
+        color: #000;
+        max-width: 600px;
+        font-size: 2em;
+      }
+
+      .content p{
+        font-size: 1.2em;
+        color: #0d0d0d;
+      }
+
+      .content .btn{
+        margin: 25px 0;
+      }
+
+      .content .btn a{
+        text-decoration: none;
+        border: 2px solid #69a6ce;
+        color: #69a6ce;
+        font-weight: 500;
+        padding: 10px 25px;
+        border-radius: 25px;
+        text-transform: uppercase;
+      }
+
+      .content .btns a:hover{
+        color: #fff;
+        background-color: #69a6ce;
+      }
+      
+    </style>
   </head>
   <body>
     <%- navbar %>
+    <div class="error-page">
+      <div class="content">
+        <h1>404</h1>
+        <h4>Oops! Page not found</h4>
+        <p>Sorry, the page you're looking for doesn't exist. Try searching for something else.</p>
+        <div class="btn">
+          <a href="#">Return Home</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
