--- a/public/pages/404.ejs
+++ b/public/pages/404.ejs
@@ -32,6 +32,7 @@
         justify-content: center;
         background: #fff;
         box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
+        margin: auto;
       }
 
       .error-page .content{
@@ -70,6 +71,7 @@
         padding: 10px 25px;
         border-radius: 25px;
         text-transform: uppercase;
+        transition: all 0.3s ease;
       }
 
       .content .btns a:hover{
