--- a/public/pages/404.ejs
+++ b/public/pages/404.ejs
@@ -26,7 +26,7 @@
         position: absolute;
         top: 10%;
         left: 17%;
-        bottom: 20%;
+        bottom: 10%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -89,7 +89,7 @@
         <h4>Oops! Page not found</h4>
         <p>Sorry, the page you're looking for doesn't exist. Try searching for something else.</p>
         <div class="btn">
-          <a href="#">Return Home</a>
+          <a href="/schema/products.js">Return Home</a>
         </div>
       </div>
     </div>
