--- a/public/pages/404.ejs
+++ b/public/pages/404.ejs
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <!--<link rel="stylesheet" href="../css/styles.css" />-->
     <style>
       *{
         margin: 0;
@@ -82,7 +82,7 @@
     </style>
   </head>
   <body>
-    <%- navbar %>
+    <!--<%- navbar %>-->
     <div class="error-page">
       <div class="content">
         <h1>404</h1>
