--- a/public/pages/404.ejs
+++ b/public/pages/404.ejs
@@ -32,7 +32,7 @@
         justify-content: center;
         background: #fff;
         box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
-        /*margin-left: 80px;*/
+        margin-left: 150px;
       }
 
       .error-page .content{
@@ -43,7 +43,7 @@
       .content h1{
         font-size: 18vw;
         line-height: 1em;
-        color: #69a6ce;
+        color: #0e2e44;
       }
 
       .content h4{
