--- a/public/pages/404.ejs
+++ b/public/pages/404.ejs
@@ -67,7 +67,7 @@
       .content .btn a{
         text-decoration: none;
         border: 2px solid #69a6ce;
-        color: #69a6ce;
+        color: #0e2e44;
         font-weight: 500;
         padding: 10px 25px;
         border-radius: 25px;
@@ -75,9 +75,9 @@
         transition: all 0.3s ease;
       }
 
-      .content .btns a:hover{
+      .content .btn a:hover{
         color: #fff;
-        background-color: #69a6ce;
+        background-color: #0e2e44;
       }
       
     </style>
