--- a/public/pages/404.ejs
+++ b/public/pages/404.ejs
@@ -32,7 +32,7 @@
         justify-content: center;
         background: #fff;
         box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
-        margin-left: 150px;
+        margin-left: 170px;
       }
 
       .error-page .content{
@@ -66,7 +66,7 @@
 
       .content .btn a{
         text-decoration: none;
-        border: 2px solid #69a6ce;
+        border: 2px solid #0e2e44;
         color: #0e2e44;
         font-weight: 500;
         padding: 10px 25px;
