--- a/public/pages/404.ejs
+++ b/public/pages/404.ejs
@@ -90,7 +90,7 @@
         <h4>Oops! Page not found</h4>
         <p>Sorry, the page you're looking for doesn't exist. Try searching for something else.</p>
         <div class="btn">
-          <a href="/schema/products.js">Return Home</a>
+          <a href="/index.ejs">Return Home</a>
         </div>
       </div>
     </div>
