--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -12,17 +12,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
+    <!--<link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
-    />
+    />-->
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <%- navbar %>
-    <div
+    <!--<div
       id="carouselExampleControls"
       class="carousel slide"
       data-ride="carousel"
@@ -61,6 +61,6 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
+    </div>-->
   </body>
 </html>
