--- a/public/components/section.ejs
+++ b/public/components/section.ejs
@@ -1,4 +1,4 @@
-<section class="section">
+<!--<section class="section">
   <div class="container shop-section">
     <div class="box">
       <div class="box-content">
@@ -61,4 +61,4 @@
       </div>
     </div>
   </div>
-</section>
+</section>-->
