--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -62,7 +62,7 @@
         <span class="sr-only">Next</span>
       </a>
     </div>-->
-    <section class="section">
+    <!--<section class="section">
       <div class="container shop-section">
         <div class="box">
           <div class="box-content">
@@ -125,7 +125,14 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
+
+    <div class="header-slider">
+      <ul>
+        <img src="../images/hero_image.jpg" alt="" class="header-img">
+        <img src="../images/banner_img.jpg" alt="" class="header-img">
+      </ul>
+    </div>
     
   </body>
 </html>
