added img in index

--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -131,6 +131,7 @@
       <ul>
         <img src="../images/hero_image.jpg" alt="" class="header-img">
         <img src="../images/banner_img.jpg" alt="" class="header-img">
+        <img src="../images/header1.jpg" alt="" class="header-img">
       </ul>
     </div>
     
