--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -19,6 +19,34 @@
       crossorigin="anonymous"
     />-->
     <link rel="stylesheet" href="../css/styles.css" />
+
+    <style>
+      .header-slider ul{
+        display: flex;
+        overflow-y: hidden;
+      }
+
+      .header-img{
+        max-width: 100%;
+      }
+
+      .header-slider a{
+        position: absolute;
+        top: 20%;
+        z-index: 1;
+        padding: 5vh 1vw;
+        background: #ffffff4f;
+        color: #0000007b;
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 18px;
+        cursor: pointer;
+      }
+
+      .control-next{
+        right: 0;
+      }
+    </style>
   </head>
   <body>
     <%- navbar %>
@@ -128,6 +156,8 @@
     </section>-->
 
     <div class="header-slider">
+      <a href="#" class="control-prev">&#8592;</a>
+      <a href="#" class="control-next">&#8594;</a>
       <ul>
         <img src="../images/hero_image.jpg" alt="" class="header-img">
         <img src="../images/banner_img.jpg" alt="" class="header-img">
