--- a/public/pages/404.ejs
+++ b/public/pages/404.ejs
@@ -14,15 +14,15 @@
     />
     <!--<link rel="stylesheet" href="../css/styles.css" />-->
     <style>
-      *{
+      * {
         margin: 0;
         padding: 0;
         outline: none;
         box-sizing: border-box;
-        font-family: 'Poppins', sans-serif;
+        font-family: "Poppins", sans-serif;
       }
 
-      .error-page{
+      .error-page {
         position: absolute;
         top: 10%;
         left: 17%;
@@ -31,22 +31,22 @@
         align-items: center;
         justify-content: center;
         background: #fff;
-        box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
         margin-left: 170px;
       }
 
-      .error-page .content{
+      .error-page .content {
         max-width: 600px;
         text-align: center;
       }
 
-      .content h1{
+      .content h1 {
         font-size: 18vw;
         line-height: 1em;
         color: #0e2e44;
       }
 
-      .content h4{
+      .content h4 {
         font-size: 1.5em;
         margin-top: 20px;
         text-transform: uppercase;
@@ -55,16 +55,16 @@
         font-size: 2em;
       }
 
-      .content p{
+      .content p {
         font-size: 1.2em;
         color: #0d0d0d;
       }
 
-      .content .btn{
+      .content .btn {
         margin: 25px 0;
       }
 
-      .content .btn a{
+      .content .btn a {
         text-decoration: none;
         border: 2px solid #0e2e44;
         color: #0e2e44;
@@ -75,11 +75,10 @@
         transition: all 0.3s ease;
       }
 
-      .content .btn a:hover{
+      .content .btn a:hover {
         color: #fff;
         background-color: #0e2e44;
       }
-      
     </style>
   </head>
   <body>
@@ -88,9 +87,12 @@
       <div class="content">
         <h1>404</h1>
         <h4>Oops! Page not found</h4>
-        <p>Sorry, the page you're looking for doesn't exist. Try searching for something else.</p>
+        <p>
+          Sorry, the page you're looking for doesn't exist. Try searching for
+          something else.
+        </p>
         <div class="btn">
-          <a href="/index.ejs">Return Home</a>
+          <a href="/">Return Home</a>
         </div>
       </div>
     </div>
