--- a/public/components/navbar.ejs
+++ b/public/components/navbar.ejs
@@ -16,7 +16,7 @@
       </a>
     </li>
     <li class="list-item-inline">
-      <a class="link" href="#">
+      <a class="link" href="/shop">
         <i class="fa-solid fa-cart-shopping"></i>
       </a>
     </li>
