--- a/public/pages/cart.ejs
+++ b/public/pages/cart.ejs
@@ -23,7 +23,8 @@
         <h5 class="Action">Remove all</h5>
       </div>
       <!-- cart items -->
-      <% let totalAmount = 0; %> <% user.cart.forEach(function(item, index) { %>
+      <% let totalAmount = 0, totalitems = 0; %> <%
+      user.cart.forEach(function(item, index) { %>
       <div class="Cart-Items">
         <div class="image-box">
           <img src="<%= images[item.productName] %>" style="height: 120px" />
@@ -41,7 +42,21 @@
           <div class="remove">Remove</div>
         </div>
       </div>
-      <% totalAmount += item.amount; %> <% }); %>
+      <% totalitems += item.quantity %> <% totalAmount += item.amount; %> <% });
+      %>
+      <hr />
+      <div class="checkout">
+        <div class="total">
+          <div>
+            <div class="Subtotal">Sub-Total</div>
+            <div class="items"><%= totalitems %> items</div>
+          </div>
+          <div class="”total-mount">$<%= totalAmount %></div>
+        </div>
+        <a href="/gateway">
+          <button class="button">Checkout</button>
+        </a>
+      </div>
       <!-- cart items ends -->
     </div>
     <!-- cart -->
