--- a/public/components/navbar.ejs
+++ b/public/components/navbar.ejs
@@ -5,7 +5,7 @@
       <a class="link link-active" href="/">Home</a>
     </li>
     <li class="list-item-inline">
-      <a class="link" href="/products">Shop</a>
+      <a class="link" href="/shop">Shop</a>
     </li>
     <li class="list-item-inline">
       <a class="link" href="#">Contact Us</a>
@@ -16,7 +16,7 @@
       </a>
     </li>
     <li class="list-item-inline">
-      <a class="link" href="/shop">
+      <a class="link" href="/cart">
         <i class="fa-solid fa-cart-shopping"></i>
       </a>
     </li>
