--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,6 +1,6 @@
 .Cart-Container {
-  width: 80%;
-  height: 85%;
+  width: 100%;
+  height: 85%; /* Change this to your desired height */
   background: linear-gradient(to bottom right, #e3f0ff, #fafcff);
   border-radius: 20px;
   box-shadow: 0px 25px 40px #1687d933;
@@ -10,6 +10,7 @@
   left: 0;
   right: 0;
   margin: auto;
+  overflow-y: auto; /* Add this line */
 }
 
 .Header {
@@ -51,12 +52,13 @@
   height: 100%;
 }
 .title {
-  padding-top: 5px;
+  padding-top: 55px;
   line-height: 10px;
   font-size: 32px;
   font-family: Open Sans;
   font-weight: 800;
   color: #202020;
+  word-wrap: break-word;
 }
 
 .prices {
