--- a/public/pages/cart.ejs
+++ b/public/pages/cart.ejs
@@ -20,7 +20,9 @@
     <div class="Cart-Container">
       <div class="Header">
         <h3 class="Heading">Shopping Cart</h3>
+        <% if (user.cart.length > 0) { %>
         <h5 class="Action">Remove all</h5>
+        <% } %>
       </div>
       <!-- cart items -->
       <% let totalAmount = 0, totalitems = 0; %> <%
