--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -164,6 +164,29 @@
         <img src="../images/header1.jpg" alt="" class="header-img">
       </ul>
     </div>
+
+    <div class="box-row">
+      <div class="box-col">
+        <h3>Electronics</h3>
+        <img src="../images/box4_image.jpg" alt="">
+        <a href="/">Shop More</a>
+      </div>
+      <div class="box-col">
+        <h3>Free International Returns</h3>
+        <img src="../images/box1-3.jpg" alt="">
+        <a href="/">Shop More</a>
+      </div>
+      <div class="box-col">
+        <h3>Free International Returns</h3>
+        <img src="../images/box1_image.jpg" alt="">
+        <a href="/">Shop More</a>
+      </div>
+      <div class="box-col">
+        <h3>Free International Returns</h3>
+        <img src="../images/box1-2.jpg" alt="">
+        <a href="/">Shop More</a>
+      </div>
+    </div>
     
 
 
