--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -46,6 +46,26 @@
       .control-next{
         right: 0;
       }
+
+      .box-row{
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 20px;
+        justify-content: space-between;
+        margin: 20px 30px;
+      }
+
+      .box-col{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        padding: 15px 20px;
+        background: #fff;
+        max-width: 24%;
+        min-height: 200px;
+      }
+
+      
     </style>
   </head>
   <body>
@@ -172,17 +192,17 @@
         <a href="/">Shop More</a>
       </div>
       <div class="box-col">
-        <h3>Free International Returns</h3>
+        <h3>Toys</h3>
         <img src="../images/box1-3.jpg" alt="">
         <a href="/">Shop More</a>
       </div>
       <div class="box-col">
-        <h3>Free International Returns</h3>
+        <h3>Clothing</h3>
         <img src="../images/box1_image.jpg" alt="">
         <a href="/">Shop More</a>
       </div>
       <div class="box-col">
-        <h3>Free International Returns</h3>
+        <h3>Jewellery</h3>
         <img src="../images/box1-2.jpg" alt="">
         <a href="/">Shop More</a>
       </div>
