added imgs index

--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -188,7 +188,7 @@
     <div class="box-row">
       <div class="box-col">
         <h3>Electronics</h3>
-        <img src="../images/box4_image.jpg" alt="">
+        <img src="../images/box3-4.jpg" alt="">
         <a href="/">Shop More</a>
       </div>
       <div class="box-col">
@@ -198,7 +198,7 @@
       </div>
       <div class="box-col">
         <h3>Clothing</h3>
-        <img src="../images/box1_image.jpg" alt="">
+        <img src="../images/box2-4.jpg" alt="">
         <a href="/">Shop More</a>
       </div>
       <div class="box-col">
