--- a/public/pages/index.ejs
+++ b/public/pages/index.ejs
@@ -61,11 +61,19 @@
         gap: 10px;
         padding: 15px 20px;
         background: #fff;
-        max-width: 24%;
+        max-width: 22%;
         min-height: 200px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       }
 
-      
+      .box-col a{
+        font-size: 14px;
+        color: #009999;
+        font-weight: 500;
+        text-decoration: none;
+      } 
+
+    
     </style>
   </head>
   <body>
