--- a/public/pages/products.ejs
+++ b/public/pages/products.ejs
@@ -13,12 +13,44 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="../css/styles.css" />
+
+    <style>
+      .search_bar{
+        width: max-content;
+        display: flex;
+        align-items: center;
+        padding: 14px;
+        border-radius: 28px;
+        background: #ece6e6;
+        width: 600px;
+        margin: auto;
+        margin-top: 14px;
+        margin-bottom: 14px;
+        border: 2px solid #0891b2;
+      }
+
+      #searchInput{
+        font-size: 16px;
+        font-family: 'Lexend', sans-serif;
+        color: #333333;
+        margin-left: 14px;
+        outline: none;
+        border: none;
+        background: transparent;
+        flex: 1;
+      }
+
+      .search-icon{
+        color: #333333;
+      }
+    </style>
   </head>
   <body>
     <%- navbar %>
 
     <!-- Search bar -->
     <div class="search_bar">
+      <i class="search-icon fa-solid fa-magnifying-glass"></i>
       <input type="text" id="searchInput" placeholder="Search products..." />
     </div>
 
