--- a/public/pages/products.ejs
+++ b/public/pages/products.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="/" rel="canonical" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product | Amazon</title>
@@ -15,7 +16,7 @@
     <link rel="stylesheet" href="../css/styles.css" />
 
     <style>
-      .search_bar{
+      .search_bar {
         width: max-content;
         display: flex;
         align-items: center;
@@ -29,9 +30,9 @@
         border: 2px solid #0891b2;
       }
 
-      #searchInput{
+      #searchInput {
         font-size: 16px;
-        font-family: 'Lexend', sans-serif;
+        font-family: "Lexend", sans-serif;
         color: #333333;
         margin-left: 14px;
         outline: none;
@@ -40,7 +41,7 @@
         flex: 1;
       }
 
-      .search-icon{
+      .search-icon {
         color: #333333;
       }
     </style>
