--- a/public/pages/products.ejs
+++ b/public/pages/products.ejs
@@ -43,6 +43,72 @@
       .search-icon{
         color: #333333;
       }
+
+      .sec{
+        padding: 10px 5%;
+      }
+
+      .products{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(320, 1fr));
+      }
+
+      .products .items{
+        width: 320px;
+        background: #f5f5f5;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+        border-radius: 5px;
+        padding: 5px;
+        margin-bottom: 20px;
+        /*height: 420px;*/
+      }
+
+      .products .items a{
+        text-decoration: none;
+      }
+      
+      .products .items .product_image{
+        height: 240px;
+        width: 90%;
+      }
+
+      .products .items .product_name{
+        font-weight: 900;
+        font-size: 20px;
+        color: #424144;
+        padding: 0 20px;
+      }
+
+      .products .items .box{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px;
+        width: 85%;
+        height: 20px;
+        background: transparent;
+      }
+
+      .products .items .box .price{
+        color: #0891b2;
+        font-size: 20px;
+        font-weight: bold;
+      }
+
+      .products .items .box .btn{
+        font-size: 13px;
+        color: #0891b2;
+        padding: 10px 18px;
+        font-weight: 900;
+        border: 1px solid #0891b2;
+        border-radius: 20px;
+      }
+
+      .products .items .box .btn:hover{
+        cursor: pointer;
+        background-color: #0891b2;
+        color: white;
+      }
     </style>
   </head>
   <body>
@@ -56,19 +122,27 @@
 
     <!-- products -->
     <% products.forEach(product => { %>
-    <div class="items">
-      <!-- linking whole items to product page link -->
-      <a href="/product-info/<%= product.name %>" class="product_name">
-        <!-- product image -->
-        <img
-          src="<%= product.image %>"
-          alt="<%= product.image %>"
-          class="product_image"
-        />
-        <!-- product name -->
-        <h6 class="product_name"><%= product.name %></h6>
-        <!-- add to cart button -->
-      </a>
+    <div class="sec">
+      <div class="products">
+        <div class="items">
+          <!-- linking whole items to product page link -->
+          <a href="/product-info/<%= product.name %>" class="product_name">
+            <!-- product image -->
+            <img
+              src="<%= product.image %>"
+              alt="<%= product.image %>"
+              class="product_image"
+            />
+            <!-- product name -->
+            <div class="product_name"><%= product.name %></div>
+            <!-- add to cart button -->
+            <div class="box">
+              <div class="price">$<%= product.price %></div>
+              <button class="btn">Add to Cart</button>
+            </div>
+          </a>
+        </div>
+      </div>
     </div>
     <% }); %>
     <!-- script for search bar -->
