--- a/public/pages/products.ejs
+++ b/public/pages/products.ejs
@@ -50,8 +50,8 @@
       }
 
       .products{
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(320, 1fr));
+        float: left;
+        margin-right: 7px;
       }
 
       .products .items{
@@ -61,7 +61,6 @@
         border-radius: 5px;
         padding: 5px;
         margin-bottom: 20px;
-        /*height: 420px;*/
       }
 
       .products .items a{
