--- a/public/pages/products.ejs
+++ b/public/pages/products.ejs
@@ -45,57 +45,62 @@
         color: #333333;
       }
 
-      .sec{
+      .sec {
         padding: 10px 5%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
       }
 
-      .products{
-        float: left;
-        margin-right: 7px;
+      .products {
+        width: calc(25% - 10px); /* 25% of the container width minus margins */
+        margin-bottom: 20px;
       }
 
-      .products .items{
-        width: 320px;
+      .products .items {
         background: #f5f5f5;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
         border-radius: 5px;
         padding: 5px;
-        margin-bottom: 20px;
       }
 
-      .products .items a{
+      .products .items a {
         text-decoration: none;
       }
-      
-      .products .items .product_image{
-        height: 240px;
-        width: 90%;
-      }
 
-      .products .items .product_name{
+      .products .items .product_image {
+        height: 240px;
+        width: 100%;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+      }
+      .box {
+        height: 100px;
+      }
+      .products .items .product_name {
         font-weight: 900;
         font-size: 20px;
         color: #424144;
         padding: 0 20px;
       }
 
-      .products .items .box{
+      .products .items .box {
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 20px;
-        width: 85%;
-        height: 20px;
         background: transparent;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
       }
 
-      .products .items .box .price{
+      .products .items .box .price {
         color: #0891b2;
         font-size: 20px;
         font-weight: bold;
       }
 
-      .products .items .box .btn{
+      .products .items .box .btn {
         font-size: 13px;
         color: #0891b2;
         padding: 10px 18px;
@@ -104,7 +109,7 @@
         border-radius: 20px;
       }
 
-      .products .items .box .btn:hover{
+      .products .items .box .btn:hover {
         cursor: pointer;
         background-color: #0891b2;
         color: white;
@@ -112,6 +117,7 @@
     </style>
   </head>
   <body>
+    <!-- Navbar -->
     <%- navbar %>
 
     <!-- Search bar -->
@@ -120,22 +126,18 @@
       <input type="text" id="searchInput" placeholder="Search products..." />
     </div>
 
-    <!-- products -->
-    <% products.forEach(product => { %>
+    <!-- Products -->
     <div class="sec">
+      <% products.forEach(product => { %>
       <div class="products">
         <div class="items">
-          <!-- linking whole items to product page link -->
           <a href="/product-info/<%= product.name %>" class="product_name">
-            <!-- product image -->
             <img
               src="<%= product.image %>"
               alt="<%= product.image %>"
               class="product_image"
             />
-            <!-- product name -->
             <div class="product_name"><%= product.name %></div>
-            <!-- add to cart button -->
             <div class="box">
               <div class="price">$<%= product.price %></div>
               <button class="btn">Add to Cart</button>
@@ -143,8 +145,8 @@
           </a>
         </div>
       </div>
+      <% }); %>
     </div>
-    <% }); %>
     <!-- script for search bar -->
     <script>
       function searchProducts() {
