--- a/public/pages/productinfo.ejs
+++ b/public/pages/productinfo.ejs
@@ -14,7 +14,40 @@
     />
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
+  <style>
+    .btn{
+      font-size: 13px;
+        color: #0891b2;
+        padding: 10px 18px;
+        font-weight: 900;
+        border: 1px solid #0891b2;
+        border-radius: 20px;
+        text-decoration: none;
+    }
+
+    .btn:hover{
+        cursor: pointer;
+        background-color: #0891b2;
+        color: white;
+      }
+  </style>
   <body>
     <%- navbar %>
+
+    <div class="container">
+      <div class="small-container">
+        <div class="row">
+          <div class="col-2">
+            <img src="" alt="">
+          </div>
+          <div class="col-2">
+            <h1><%= product.name %></h1>
+            <h4>$<%= product.price %></h4>
+            <input type="number" value="1">
+            <a href="" class="btn">Add to Cart</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
