--- a/public/pages/products.ejs
+++ b/public/pages/products.ejs
@@ -70,7 +70,7 @@
 
       .products .items .product_image {
         height: 240px;
-        width: 100%;
+        width: 90%;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
       }
@@ -107,6 +107,7 @@
         font-weight: 900;
         border: 1px solid #0891b2;
         border-radius: 20px;
+        margin-left: 140px;
       }
 
       .products .items .box .btn:hover {
@@ -141,7 +142,7 @@
             <!-- add to cart button -->
             <div class="box">
               <div class="price">$<%= product.price %></div>
-              <button class="btn">Add to Cart</button>
+              <button class="btn">Buy Now</button>
             </div>
           </a>
         </div>
