--- a/public/pages/products.ejs
+++ b/public/pages/products.ejs
@@ -138,12 +138,14 @@
               class="product_image"
             />
             <div class="product_name"><%= product.name %></div>
-            <!-- add to cart button -->
-            <div class="box">
-              <div class="price">$<%= product.price %></div>
-              <button class="btn">Add to Cart</button>
-            </div>
           </a>
+          <!-- add to cart button -->
+          <div class="box">
+            <div class="price">$<%= product.price %></div>
+            <button class="btn" onclick="addToCart('<%= product.name %>')">
+              Add to Cart
+            </button>
+          </div>
         </div>
       </div>
       <% }); %>
@@ -171,6 +173,33 @@
       document
         .getElementById("searchInput")
         .addEventListener("input", searchProducts);
+
+      //  function to add to cart
+      function addToCart(productName) {
+        fetch("/api/cart/update", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            quantity: 1,
+            productName: productName,
+          }),
+        })
+          .then((response) => {
+            console.log(response);
+            if (response.ok) {
+              alert("Product added to cart successfully!");
+            } else if (response.status === 501) {
+              alert("you need to login first");
+            } else {
+              alert("Failed to add product to cart.");
+            }
+          })
+          .catch((error) => {
+            console.error("Error adding product to cart:", error);
+          });
+      }
     </script>
   </body>
 </html>
