--- a/public/pages/products.ejs
+++ b/public/pages/products.ejs
@@ -73,6 +73,7 @@
         width: 90%;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
+        flex-shrink: 0;
       }
       .box {
         height: 100px;
