--- a/public/components/navbar.ejs
+++ b/public/components/navbar.ejs
@@ -7,14 +7,14 @@
     <li class="list-item-inline">
       <a class="link" href="/shop">Shop</a>
     </li>
-    <li class="list-item-inline">
+    <!--<li class="list-item-inline">
       <a class="link" href="#">Contact Us</a>
     </li>
     <li class="list-item-inline">
       <a class="link" href="#">
         <i class="fa-solid fa-magnifying-glass"></i>
       </a>
-    </li>
+    </li>-->
     <li class="list-item-inline">
       <a class="link" href="/cart">
         <i class="fa-solid fa-cart-shopping"></i>
