--- a/public/pages/products.ejs
+++ b/public/pages/products.ejs
@@ -165,7 +165,7 @@
             var item = productNameElement.closest(".products");
             item.style.visibility = "visible";
             item.style.position = "relative";
-            item.style.marginTop = "0"; // Reset the negative margin
+            item.style.marginTop = "0";
           });
         } else {
           productNames.forEach((productNameElement) => {
