--- a/public/components/navbar.ejs
+++ b/public/components/navbar.ejs
@@ -5,7 +5,17 @@
       <a class="link link-active" href="/">Home</a>
     </li>
     <li class="list-item-inline">
-      <a class="link" href="/shop">Shop</a>
+      <a class="link" href="/shop">Shop
+        <i class="fa-solid fa-caret-down"></i>
+      </a>
+      <div class="dropdown">
+        <ul>
+          <li><a class="link" href="">Electronics</a></li>
+          <li><a class="link" href="">Toys</a></li>
+          <li><a class="link" href="">Clothing</a></li>
+          <li><a class="link" href="">Jewellery</a></li>
+        </ul>
+      </div>
     </li>
     <li class="list-item-inline">
       <a class="link" href="/cart">
