--- a/public/components/navbar.ejs
+++ b/public/components/navbar.ejs
@@ -1,19 +1,19 @@
 <nav class="navigation container">
-  <div class="nav-brand">AMAZON</div>
+  <div class="nav-brand">amazon</div>
   <ul class="list-non-bullet nav-pills">
     <li class="list-item-inline">
-      <a class="link link-active" href="/">Home</a>
+      <a class="link link-active" href="/">HOME</a>
     </li>
     <li class="list-item-inline">
-      <a class="link" href="/shop">Shop
+      <a class="link" href="/shop">SHOP
         <i class="fa-solid fa-caret-down"></i>
       </a>
       <div class="dropdown">
         <ul>
-          <li><a class="link" href="">Electronics</a></li>
-          <li><a class="link" href="">Toys</a></li>
-          <li><a class="link" href="">Clothing</a></li>
-          <li><a class="link" href="">Jewellery</a></li>
+          <li><a class="link" href="">ELECTRONICS</a></li>
+          <li><a class="link" href="">TOYS</a></li>
+          <li><a class="link" href="">CLOTHING</a></li>
+          <li><a class="link" href="">JEWELLERY</a></li>
         </ul>
       </div>
     </li>
