--- a/public/components/navbar.ejs
+++ b/public/components/navbar.ejs
@@ -5,15 +5,16 @@
       <a class="link link-active" href="/">HOME</a>
     </li>
     <li class="list-item-inline">
-      <a class="link" href="/shop">SHOP
+      <a class="link" href="/shop"
+        >SHOP
         <i class="fa-solid fa-caret-down"></i>
       </a>
       <div class="dropdown">
         <ul>
-          <li><a class="link" href="">ELECTRONICS</a></li>
-          <li><a class="link" href="">TOYS</a></li>
-          <li><a class="link" href="">CLOTHING</a></li>
-          <li><a class="link" href="">JEWELLERY</a></li>
+          <li><a class="link" href="/shop/Electronics">ELECTRONICS</a></li>
+          <li><a class="link" href="/shop/Toys">TOYS</a></li>
+          <li><a class="link" href="/shop/Clothing">CLOTHING</a></li>
+          <li><a class="link" href="/shop/Jewellery">JEWELLERY</a></li>
         </ul>
       </div>
     </li>
